paperless/paperless-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: http
